@@ -43,20 +43,26 @@ common/pk-utils.c
 common/pk-utils.h
 
 poke/pk-cmd.c
+poke/pk-cmd-def.c
+poke/pk-cmd-editor.c
 poke/pk-cmd.h
-poke/pk-def.c
-poke/pk-editor.c
-poke/pk-help.c
+poke/pk-cmd-help.c
+poke/pk-cmd-info.c
+poke/pk-cmd-ios.c
+poke/pk-cmd-misc.c
+poke/pk-cmd-set.c
+poke/pk-cmd-vm.c
 poke/pk-hserver.c
 poke/pk-hserver.h
-poke/pk-info.c
-poke/pk-ios.c
-poke/pk-misc.c
+poke/pk-mi.c
+poke/pk-mi.h
+poke/pk-mi-json.c
+poke/pk-mi-json.h
+poke/pk-mi-msg.c
+poke/pk-mi-msg.h
 poke/pk-repl.c
 poke/pk-repl.h
-poke/pk-set.c
 poke/pk-term.c
 poke/pk-term.h
-poke/pk-vm.c
 poke/poke.c
 poke/poke.h
