@@ -13,7 +13,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-EXTRA_DIST = config lib poke.repl poke.cmd poke.map poke.pkl poke.std
+EXTRA_DIST = config lib poke.cmd poke.color poke.id3v1 poke.map poke.pkl \
+             poke.repl poke.rgb24 poke.std
 
 AUTOMAKE_OPTIONS = dejagnu
 
