@@ -1,3 +1,7 @@
+2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* POTFILES.in: Update files.
+
 2020-05-09  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* POTFILES.in: Update files.
