@@ -1,5 +1,9 @@
 2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/Makefile.am (EXTRA_DIST): Complete.
+
+2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* bootstrap.conf (libpoke_modules): Import the signal-h gnulib
 	module.
 
